--- a/provider_portal/Dockerfile
+++ b/provider_portal/Dockerfile
@@ -1,10 +1,10 @@
 FROM python
 
-WORKDIR /app
+WORKDIR /provider_portal
 
 RUN apt update
 RUN apt install python3-pip -y
-COPY requirements.txt requirements.txt
+COPY ../requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
 
 EXPOSE 5000
