--- a/provider_portal/Dockerfile
+++ b/provider_portal/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /provider_portal
 
 RUN apt update
 RUN apt install python3-pip -y
-COPY ../requirements.txt requirements.txt
+COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
 
 EXPOSE 5000
