--- a/smart_meter/Dockerfile
+++ b/smart_meter/Dockerfile
@@ -4,8 +4,9 @@ WORKDIR /smart_meter
 
 RUN apt update
 RUN apt install python3-pip -y
+COPY requirements.txt requirements.txt
+RUN pip3 install -r requirements.txt
 
 COPY . .
 
-ENV FLASK_ENV=development
-
+CMD [ "python3", "run.py" ]
