--- a/compose.yml
+++ b/compose.yml
@@ -7,7 +7,28 @@ services:
     volumes:
       - .:/app/provider_portal
 
+
   smart_meter:
     build: ./smart_meter
     volumes:
       - .:/app/smart_meter
+
+
+  mysql:
+    image: mysql
+    restart: always
+    environment:
+      MYSQL_DATABASE: 'provider_db'
+      MYSQL_USER: 'provider_user'
+      MYSQL_PASSWORD_FILE: /run/secrets/db_password
+      MYSQL_ROOT_PASSWORD_FILE: /run/secrets/db_root_password
+    secrets:
+    - db_password
+    - db_root_password
+
+
+secrets:
+  db_password:
+    file: db_password.txt
+  db_root_password:
+    file: db_root_password.txt
