Changed password file imports

--- a/compose.yml
+++ b/compose.yml
@@ -29,6 +29,6 @@ services:
 
 secrets:
   db_password:
-    file: db_password.txt
+    file: provider_portal/config/db_password.txt
   db_root_password:
-    file: db_root_password.txt
+    file: provider_portal/config/db_root_password.txt
