--- a/provider_portal/Dockerfile
+++ b/provider_portal/Dockerfile
@@ -1,13 +1,11 @@
 FROM python
 
-WORKDIR /provider_portal
+WORKDIR /app/provider_portal
 
 RUN apt update
 RUN apt install python3-pip -y
 COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
-
-COPY . .
 
 ENV FLASK_ENV=development
 
