--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,9 @@ __pycache__
 db_password.txt
 db_root_password.txt
 
-# DB data
+# provider portal
 provider_portal/db_data
+provider_portal/config/.DS_Store
+provider_portal/config/certificates/.DS_Store
+smart_meter/config/certificates/.DS_Store
+provider_portal/config/certificates/root_ca/ca-private-key.pem
