--- a/compose.yml
+++ b/compose.yml
@@ -37,12 +37,17 @@ services:
       DOCKER_INFLUXDB_INIT_BUCKET: "smartmeter"
       DOCKER_INFLUXDB_INIT_RETENTION: "520w"
       DOCKER_INFLUXDB_INIT_ADMIN_TOKEN_FILE: /run/secrets/influx_token
+      INFLUXD_TLS_CERT: "/etc/ssl/influx-public-key.pem"
+      INFLUXD_TLS_KEY: "/etc/ssl/influx-private-key.pem"
+      INFLUXDB_HTTP_HTTPS_ENABLED: "true"
     secrets:
       - influx_token
       - influx_root_password
     volumes:
       - ./provider_portal/db_data/influx/config:/etc/influxdb2
       - ./provider_portal/db_data/influx/db:/var/lib/influxdb2
+      - ./provider_portal/db_data/influx/config/influx-private-key.pem:/etc/ssl/influx-private-key.pem
+      - ./provider_portal/db_data/influx/config/influx-public-key.pem:/etc/ssl/influx-public-key.pem
     networks:
       internal:
         ipv4_address: 10.0.1.30
