--- a/compose.yml
+++ b/compose.yml
@@ -3,6 +3,8 @@ services:
   provider_portal:
     build: ./provider_portal
     container_name: provider_portal
+    ports:
+      - 8100:8100
     volumes:
       - ./provider_portal:/app/provider_portal
       - ./smart_meter/config/certificates/smartmeter_certificates:/app/smart_meter/config/certificates/smartmeter_certificates
