--- a/compose.yml
+++ b/compose.yml
@@ -31,6 +31,8 @@ services:
     security_opt:
       - no-new-privileges:true
     restart: unless-stopped
+    ports:
+      - 8086:8086
     environment:
       DOCKER_INFLUXDB_INIT_MODE: "setup"
       DOCKER_INFLUXDB_INIT_USERNAME: "admin"
